--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -1,46 +1,49 @@
 @import './default.scss';
 a{
-    background-color: $secondary-stroke !important;
     color: aliceblue !important;
     letter-spacing: 4px !important;
-    &:hover{
-        background-color: $secondary-hover !important;
-    }
+    // &:hover{
+    //     background-color: $secondary-hover;
+    // }
 }
-
+.MuiButton-root:hover{
+    background-color: rgba(25, 118, 210, 0.04) !important;
+    color: aliceblue;
+}
 .main{
     font-family: Comfortaa;
-    background-color: $main-color;
-    h1{
+    h1, h2{
         margin: $h1;
         padding: 20px 0;
     }
     button{
         position: absolute;
         bottom: 0;
-        right: 0;
-        height: 73%;
+        right: -1px;
+        height: 100%;
     }
     .movies{
-        img{
-            width: 180px;
-            height: 250px;
-            border-radius: 15%;
-            border: 3px solid aliceblue;
+        .post{
+            border-top-left-radius: 35px;
+            border-top-right-radius: 35px;
+            img{
+                width: 180px;
+                height: 250px;
+                border-radius: 34px;
+            }
+            .vote{
+                -webkit-box-shadow: 4px -1px 4px -2px rgb(0 0 0 / 77%);
+                -moz-box-shadow: 4px -1px 4px -2px rgb(0 0 0 / 77%);
+                box-shadow: 4px -1px 4px -2px rgb(0 0 0 / 77%);
+                width: 40px;
+                height: 40px;
+                font-weight: bold;
+            }
         }
-        .vote{
-            -webkit-box-shadow: 4px -1px 4px -2px rgb(0 0 0 / 77%);
-            -moz-box-shadow: 4px -1px 4px -2px rgb(0 0 0 / 77%);
-            box-shadow: 4px -1px 4px -2px rgb(0 0 0 / 77%);
-            width: 20px;
-            height: 20px;
-            font-weight: bold;
         }
     }
-}
 .search_main{
     font-family: Comfortaa;
-    background-color: $secondary-color;
     h1{
         margin: $h1;
         padding: 20px 0;
@@ -48,15 +51,15 @@ a{
     button{
         position: absolute;
         bottom: 0;
-        right: 0;
+        right: -1px;
         height: 73%;
     }
     .movies{
         img{
             width: 180px;
             height: 250px;
-            border-radius: 15%;
-            border: 3px solid aliceblue;
+            border-radius: 34px;
+            border: 3px solid black;
         }
         .vote{
             -webkit-box-shadow: 4px -1px 4px -2px rgb(0 0 0 / 77%);
