layout/design fixes

--- a/src/assets/css/default.scss
+++ b/src/assets/css/default.scss
@@ -1,6 +1,6 @@
 html, body{
-    // color: #272727;
     font-family: 'Comfortaa';
+    background-color: #000000;
 }
 *{
     box-sizing: border-box;
